# pdfoxide

./: README.md
pdfoxide-core/: Cargo.toml
pdfoxide-core/src/: lib.rs
pdfoxide-svelte/: package-lock.json  package.json  vite.config.js
pdfoxide-svelte/src/: app.html
pdfoxide-svelte/src/routes/: index.svelte
